Splitting out libgis

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 # Init and options
-AC_INIT([aweather], [0.3-p0], [spenceal@rose-hulman.edu])
+AC_INIT([libgis], [0.3], [spenceal@rose-hulman.edu])
 AM_INIT_AUTOMAKE([-Wall -Werror -Wno-portability foreign])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
@@ -16,25 +16,12 @@ PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.14 gobject-2.0 gthread-2.0 gmodule-export-
 PKG_CHECK_MODULES(GTK,  gtk+-2.0 >= 2.16 gtkglext-1.0)
 PKG_CHECK_MODULES(SOUP, libsoup-2.4 >= 2.26)
 
-# Define odd RSL install location
-AC_CHECK_LIB(rsl, RSL_wsr88d_to_radar, RSL_LIBS="-lrsl")
-AM_CONDITIONAL(HAVE_RSL, test "$RSL_LIBS" != "")
-AC_SUBST(RSL_LIBS)
-
 # Output 
 AC_CONFIG_FILES([
 	Makefile
 	src/Makefile
-	src/gis/Makefile
-	src/gis/libgis.pc
-	src/plugins/Makefile
-	data/Makefile
+	src/libgis.pc
 	docs/Makefile
 	docs/api/Makefile
 ])
 AC_OUTPUT
-
-# Print status messages
-if test "$RSL_LIBS" = ""; then
-	echo " ** Warning, RSL not found, radar plugin disabled"
-fi
