Reorganize BMNG and SRTM into plugins
- Create dummy plugins in src/plugins for bmng and srtm.
- Optimize Roam code:
  - Fewer height and projection updates
  - Cache triangle l-r midpoints and share them with children
- Also remove a lot of trailing whitespace

--- a/configure.ac
+++ b/configure.ac
@@ -20,6 +20,7 @@ PKG_CHECK_MODULES(SOUP, libsoup-2.4 >= 2.26)
 AC_CONFIG_FILES([
 	Makefile
 	src/Makefile
+	src/plugins/Makefile
 	src/libgis.pc
 	docs/Makefile
 	docs/api/Makefile
