Fix misc bugs and bump version to 0.3

--- a/Makefile.am
+++ b/Makefile.am
@@ -16,7 +16,7 @@ release: all dist
 	git push --all
 	echo $(VERSION) > LATEST
 	scp LATEST $(PACKAGE)-$(VERSION).tar.* \
-		"lug@lug.rose-hulman.edu:/home/lug/htdocs/proj/$(PACKAGE)"; \
+		"spenceal@lug.rose-hulman.edu:/home/lug/htdocs/proj/$(PACKAGE)"; \
 	rm -f LATEST
 
 depscan:
