--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -10,23 +10,23 @@ lib_LTLIBRARIES  = libgis.la
 gis_includedir = $(includedir)/gis
 gis_include_HEADERS = \
 	gis.h         \
-	gis-world.h   \
-	gis-view.h    \
+	gis-viewer.h  \
 	gis-prefs.h   \
 	gis-opengl.h  \
 	gis-plugin.h  \
+	gis-util.h    \
 	gis-data.h    \
 	gis-tile.h    \
 	gis-wms.h     \
 	gpqueue.h     \
 	roam.h
 libgis_la_SOURCES = \
-	gis-world.c   gis-world.h   \
-	gis-view.c    gis-view.h    \
+	gis-viewer.c  gis-viewer.h  \
 	gis-prefs.c   gis-prefs.h   \
 	gis-opengl.c  gis-opengl.h  \
 	gis-plugin.c  gis-plugin.h  \
 	gis-marshal.c gis-marshal.h \
+	gis-util.c    gis-util.h    \
 	gis-data.c    gis-data.h    \
 	gis-tile.c    gis-tile.h    \
 	gis-wms.c     gis-wms.h     \
@@ -47,7 +47,7 @@ bin_PROGRAMS = gis_test wms_test
 gis_test_SOURCES  = gis_test.c gis.h
 gis_test_LDADD    = $(AM_LDADD) libgis.la
 
-wms_test_SOURCES  = wms_test.c gis-world.c gis-world.h gis-wms.c gis-wms.h gis-tile.c gis-tile.h
+wms_test_SOURCES  = wms_test.c gis-util.c gis-util.h gis-wms.c gis-wms.h gis-tile.c gis-tile.h
 wms_test_LDADD    = $(AM_LDADD)
 
 MAINTAINERCLEANFILES = Makefile.in
