Refactor GisViewer and GisOpenGL
- GisViewer is an abstract type that extends GtkDrawingArea
- GisOpenGL extends GisViewer and is the core of the library.
  It is always accessed though the GisViewer API

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -46,6 +46,7 @@ bin_PROGRAMS = gis_test wms_test
 
 gis_test_SOURCES  = gis_test.c gis.h
 gis_test_LDADD    = $(AM_LDADD) libgis.la
+gis_test_LDFLAGS  = -static
 
 wms_test_SOURCES  = wms_test.c gis-util.c gis-util.h gis-wms.c gis-wms.h gis-tile.c gis-tile.h
 wms_test_LDADD    = $(AM_LDADD)
