Stub out an environment plugin.
TODO: do a halfway decent sky and stars rendering.

--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -7,9 +7,10 @@ LIBS        = $(top_srcdir)/src/libgis.la
 
 pluginsdir  = "$(libdir)/gis"
 
-plugins_LTLIBRARIES = bmng.la srtm.la test.la
+plugins_LTLIBRARIES = bmng.la srtm.la env.la test.la
 bmng_la_SOURCES     = bmng.c bmng.h
 srtm_la_SOURCES     = srtm.c srtm.h
+env_la_SOURCES      = env.c  env.h
 test_la_SOURCES     = test.c test.h
 
 noinst_LTLIBRARIES  = teapot.la
