Convert GisTile to GisObject
- This lets us remove the special gis_veiwer_render_tile[s] interfaces.

- We might want to add back in a similar gis_viewer_draw_object at some
  point.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -52,6 +52,7 @@ gis_demo_LDFLAGS  = -static
 tile_test_SOURCES = tile-test.c   \
 	gis-util.c   gis-util.h   \
 	gis-tile.c   gis-tile.h   \
+	gis-object.c gis-object.h \
 	gis-wms.c    gis-wms.h
 tile_test_LDADD   = $(AM_LDADD)
 
