Move objects to a subdirectory
- Organize automake files a bit while we're at it

--- a/configure.ac
+++ b/configure.ac
@@ -12,14 +12,16 @@ PKG_PROG_PKG_CONFIG
 GTK_DOC_CHECK(1.9)
 
 # Check for required packages
-PKG_CHECK_MODULES(GLIB, glib-2.0 >= 2.14 gobject-2.0 gthread-2.0)
-PKG_CHECK_MODULES(GTK,  gtk+-2.0 >= 2.16 gtkglext-1.0)
-PKG_CHECK_MODULES(SOUP, libsoup-2.4 >= 2.26)
+PKG_CHECK_MODULES(GLIB,  glib-2.0 >= 2.14 gobject-2.0 gthread-2.0)
+PKG_CHECK_MODULES(CAIRO, cairo)
+PKG_CHECK_MODULES(GTK,   gtk+-2.0 >= 2.16 gtkglext-1.0)
+PKG_CHECK_MODULES(SOUP,  libsoup-2.4 >= 2.26)
 
 # Output 
 AC_CONFIG_FILES([
 	Makefile
 	src/Makefile
+	src/objects/Makefile
 	src/plugins/Makefile
 	src/libgis.pc
 	docs/Makefile
