--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,12 +1,14 @@
-SUBDIRS = . plugins
+SUBDIRS = objects . plugins
 
-AM_CFLAGS   = -Wall --std=gnu99
+AM_CFLAGS   = -Wall --std=gnu99 -Iobjects
 AM_CPPFLAGS = $(GLIB_CFLAGS) $(GTK_CFLAGS) $(SOUP_CFLAGS)
 AM_LDADD    = $(GLIB_LIBS) $(GTK_LIBS) $(SOUP_LIBS)
+AM_LDFLAGS  = --as-needed -no-undefined
 
-# Library
 BUILT_SOURCES = gis-marshal.c gis-marshal.h
-lib_LTLIBRARIES  = libgis.la
+
+
+# Headers
 gis_includedir = $(includedir)/gis
 gis_include_HEADERS = \
 	gis.h         \
@@ -14,47 +16,47 @@ gis_include_HEADERS = \
 	gis-prefs.h   \
 	gis-opengl.h  \
 	gis-plugin.h  \
-	gis-object.h  \
 	gis-util.h    \
-	gis-tile.h    \
 	gis-wms.h     \
 	gis-data.h    \
 	gpqueue.h     \
 	roam.h
-libgis_la_SOURCES = \
+
+# Pkg-config
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = libgis.pc
+
+# Library
+lib_LTLIBRARIES = libgis.la
+
+libgis_la_SOURCES = gis.h \
 	gis-viewer.c  gis-viewer.h  \
 	gis-prefs.c   gis-prefs.h   \
 	gis-opengl.c  gis-opengl.h  \
 	gis-plugin.c  gis-plugin.h  \
 	gis-marshal.c gis-marshal.h \
 	gis-util.c    gis-util.h    \
-	gis-tile.c    gis-tile.h    \
 	gis-wms.c     gis-wms.h     \
 	gis-data.c    gis-data.h    \
-	gis-object.c  gis-object.h  \
 	roam.c        roam.h        \
 	gpqueue.c     gpqueue.h
 libgis_la_CPPFLAGS = $(AM_CPPFLAGS) \
-	-DPKGDATADIR="\"$(datadir)/gis\"" -DPLUGINSDIR="\"$(libdir)/gis\""
-libgis_la_LIBADD = $(AM_LDADD)
-libgis_la_LDFLAGS = -no-undefined
-
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libgis.pc
+	-DPKGDATADIR="\"$(datadir)/gis\"" \
+	-DPLUGINSDIR="\"$(libdir)/gis\""
+libgis_la_LIBADD  = $(AM_LDADD) \
+	objects/libgis-objects.la
 
 # Test programs
 bin_PROGRAMS = gis-demo tile-test
 
-gis_demo_SOURCES  = gis-demo.c gis.h
+gis_demo_SOURCES  = gis-demo.c
 gis_demo_LDADD    = $(AM_LDADD) libgis.la
-gis_demo_LDFLAGS  = -static
+gis_demo_LDFLAGS  = $(AM_LDFLAGS) -static
 
-tile_test_SOURCES = tile-test.c   \
-	gis-util.c   gis-util.h   \
-	gis-tile.c   gis-tile.h   \
-	gis-object.c gis-object.h \
-	gis-wms.c    gis-wms.h
-tile_test_LDADD   = $(AM_LDADD)
+tile_test_SOURCES = tile-test.c
+tile_test_LDADD   = $(AM_LDADD) libgis.la
+tile_test_LDFLAGS = $(AM_LDFLAGS) -static
+
 
 MAINTAINERCLEANFILES = Makefile.in
 
