--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -1,6 +1,6 @@
 MAINTAINERCLEANFILES = Makefile.in
 
-AM_CFLAGS   = -Wall --std=gnu99 -I../ -I../objects
+AM_CFLAGS   = -Wall --std=gnu99 -I$(top_srcdir)/src
 AM_CPPFLAGS = $(GLIB_CFLAGS) $(GTK_CFLAGS) $(SOUP_CFLAGS)
 AM_LDFLAGS  = -module -avoid-version -no-undefined
 LIBS        = $(top_srcdir)/src/libgis.la
