--- a/src/libgis.pc.in
+++ b/src/libgis.pc.in
@@ -8,4 +8,4 @@ Description: GIS Library for Gtk+ applications
 Version: @VERSION@
 Requires: gmodule-2.0 gtk+-2.0 gtkglext-1.0 libsoup-2.4
 Libs: -L${libdir} -lgis
-Cflags: -I${includedir}
+Cflags: -I${includedir}/gis
