Split gis-data into data and http parts
gis-data:
  Generic things such as the callback types and cache types.

gis-http:
  HTTP related caching functions (what was GisData)

  This was almost entirely refactored to be single threaded. It also
  uses a GisHttp structure to store data between calls to the fetch
  function. Plugins, etc should call the fetch function from a thread to
  avoid blocking the UI.

--- a/src/data/Makefile.am
+++ b/src/data/Makefile.am
@@ -4,11 +4,13 @@ AM_CFLAGS += $(GLIB_CFLAGS) $(SOUP_CFLAGS)
 gis_data_includedir = $(includedir)/gis/data
 gis_data_include_HEADERS = \
 	gis-data.h \
+	gis-http.h \
 	gis-wms.h
 
 noinst_LTLIBRARIES = libgis-data.la
 libgis_data_la_SOURCES = \
 	gis-data.c gis-data.h \
+	gis-http.c gis-http.h \
 	gis-wms.c  gis-wms.h
 libgis_data_la_LDFLAGS = -static
 
