--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -43,12 +43,19 @@ libgis_la_LIBADD  = $(AM_LDADD) \
 	objects/libgis-objects.la \
 	data/libgis-data.la
 
-# Test programs
-bin_PROGRAMS = gis-demo tile-test
+# Demo program
+bin_PROGRAMS = gis-demo
 
 gis_demo_SOURCES  = gis-demo.c
 gis_demo_LDADD    = $(AM_LDADD) libgis.la
 gis_demo_LDFLAGS  = $(AM_LDFLAGS) -static
+
+# Test programs
+noinst_PROGRAMS = gis-test tile-test
+
+gis_test_SOURCES = gis-test.c
+gis_test_LDADD   = $(AM_LDADD) libgis.la
+gis_test_LDFLAGS = $(AM_LDFLAGS) -static
 
 tile_test_SOURCES = tile-test.c
 tile_test_LDADD   = $(AM_LDADD) libgis.la
@@ -63,13 +70,13 @@ MAINTAINERCLEANFILES = Makefile.in
 	glib-genmarshal --prefix=gis_cclosure_marshal --header $< > $@
 
 test: all .libs/gis
-	./gis-demo
+	./gis-test
 
 gdb: all .libs/gis
-	gdb ./gis-demo
+	gdb ./gis-test
 
 ddd: all .libs/gis
-	ddd ./gis-demo
+	ddd ./gis-test
 
 .libs/gis: plugins/.libs
 	ln -sf ../plugins/.libs .libs/gis
@@ -82,5 +89,5 @@ memcheck: all
 	         --leak-resolution=high         \
 	         --num-callers=50               \
 	         --suppressions=gtk.suppression \
-	         ./gis-demo                     \
+	         ./gis-test                     \
 	2> valgrind.out
