Add man page for gis-demo

--- a/docs/api/Makefile.am
+++ b/docs/api/Makefile.am
@@ -1,6 +1,10 @@
 AM_CPPFLAGS=$(SOUP_CFLAGS) $(GLIB_CFLAGS) $(GTK_CFLAGS)
 
-GTKDOC_LIBS        = $(SOUP_LIBS) $(GLIB_LIBS) $(GTK_LIBS) $(top_srcdir)/src/libgis.la $(top_srcdir)/src/plugins/*.la
+
+# Gtk docs
+GTKDOC_LIBS        = $(SOUP_LIBS) $(GLIB_LIBS) $(GTK_LIBS) \
+		     $(top_srcdir)/src/libgis.la \
+		     $(top_srcdir)/src/plugins/*.la
 DOC_MODULE         = libgis
 DOC_SOURCE_DIR     = $(top_srcdir)/src/
 DOC_MAIN_SGML_FILE = $(DOC_MODULE)-docs.sgml
@@ -8,6 +12,14 @@ MKDB_OPTIONS       = --sgml-mode --output-format=xml
 include $(top_srcdir)/gtk-doc.make
 
 CLEANFILES += libgis-sections.txt
+
+
+# Man pages 
+man_MANS = gis-demo.1
+%.1 : %.xml 
+	xsltproc -nonet http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl $<
+BUILT_EXTRA_DIST = $(man_MANS)
+
 
 MAINTAINERCLEANFILES=\
 	tmpl/* Makefile.in libgis-overrides.txt libgis.types libgis-scan.*
