--- a/configure.ac
+++ b/configure.ac
@@ -8,6 +8,7 @@ AC_CONFIG_MACRO_DIR([m4])
 # Check for required programs
 AC_PROG_CC
 AC_PROG_LIBTOOL
+DOLT
 PKG_PROG_PKG_CONFIG
 GTK_DOC_CHECK(1.9)
 
