--- a/src/data/Makefile.am
+++ b/src/data/Makefile.am
@@ -1,5 +1,5 @@
 AM_CFLAGS  = -Wall --std=gnu99 -I$(top_srcdir)/src
-AM_CFLAGS += $(GLIB_CFLAGS) $(SOUP_CFLAGS)
+AM_CFLAGS += $(GLIB_CFLAGS) $(GTK_CFLAGS) $(SOUP_CFLAGS)
 if NOTWIN32
 AM_CFLAGS += -fPIC
 endif
