Only delete sections on maintainer-clean
The sections file is included in the .tar.gz so it should not be deleted
with clean.

This fixes a Debian git-buildpackage error.

--- a/docs/api/Makefile.am
+++ b/docs/api/Makefile.am
@@ -1,6 +1,5 @@
 AM_CPPFLAGS = $(SOUP_CFLAGS) $(GLIB_CFLAGS) $(GTK_CFLAGS)
 
-
 # Gtk docs
 GTKDOC_LIBS        = $(SOUP_LIBS) $(GLIB_LIBS) $(GTK_LIBS) \
 		     $(top_srcdir)/src/libgis.la \
@@ -11,15 +10,12 @@ DOC_MAIN_SGML_FILE = $(DOC_MODULE)-docs.sgml
 MKDB_OPTIONS       = --sgml-mode --output-format=xml
 include $(top_srcdir)/gtk-doc.make
 
-CLEANFILES += libgis-sections.txt
-
-
 # Man pages 
 man_MANS = gis-demo.1
 %.1: %.xml 
 	xsltproc -nonet http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl $<
 EXTRA_DIST += $(man_MANS)
 
-
+# Remove auto-generated files
 MAINTAINERCLEANFILES = \
-	tmpl/* Makefile.in libgis-overrides.txt libgis.types libgis-scan.*
+	tmpl/* Makefile.in libgis-overrides.txt llibgis-sections.txt ibgis.types libgis-scan.*
