--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,44 +5,44 @@ AM_CPPFLAGS = $(GLIB_CFLAGS) $(GTK_CFLAGS) $(SOUP_CFLAGS)
 AM_LDADD    = $(GLIB_LIBS) $(GTK_LIBS) $(SOUP_LIBS)
 AM_LDFLAGS  = --as-needed -no-undefined
 
-BUILT_SOURCES = gis-marshal.c gis-marshal.h
+BUILT_SOURCES = grits-marshal.c grits-marshal.h
 
 
 # Headers
-gis_includedir = $(includedir)/gis
-gis_include_HEADERS = \
-	gis.h         \
-	gis-viewer.h  \
-	gis-prefs.h   \
-	gis-opengl.h  \
-	gis-plugin.h  \
-	gis-util.h    \
-	gpqueue.h     \
+grits_includedir = $(includedir)/grits
+grits_include_HEADERS = \
+	grits.h         \
+	grits-viewer.h  \
+	grits-prefs.h   \
+	grits-opengl.h  \
+	grits-plugin.h  \
+	grits-util.h    \
+	gpqueue.h       \
 	roam.h
 
 # Pkg-config
 pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = libgis.pc
+pkgconfig_DATA = grits.pc
 
 # Library
-lib_LTLIBRARIES = libgis.la
+lib_LTLIBRARIES = libgrits.la
 
-libgis_la_SOURCES = gis.h \
-	gis-viewer.c  gis-viewer.h  \
-	gis-prefs.c   gis-prefs.h   \
-	gis-opengl.c  gis-opengl.h  \
-	gis-plugin.c  gis-plugin.h  \
-	gis-marshal.c gis-marshal.h \
-	gis-util.c    gis-util.h    \
-	roam.c        roam.h        \
-	gpqueue.c     gpqueue.h
-libgis_la_CPPFLAGS = $(AM_CPPFLAGS) \
-	-DPKGDATADIR="\"$(dots)$(datadir)/$(GIS_SUBDIR)\"" \
-	-DPLUGINSDIR="\"$(dots)$(libdir)/$(GIS_SUBDIR)\""
-libgis_la_LIBADD  = $(AM_LDADD) \
-	objects/libgis-objects.la \
-	data/libgis-data.la
-libgis_la_LDFLAGS = $(AM_LDFLAGS) \
+libgrits_la_SOURCES = grits.h \
+	grits-viewer.c  grits-viewer.h  \
+	grits-prefs.c   grits-prefs.h   \
+	grits-opengl.c  grits-opengl.h  \
+	grits-plugin.c  grits-plugin.h  \
+	grits-marshal.c grits-marshal.h \
+	grits-util.c    grits-util.h    \
+	roam.c          roam.h          \
+	gpqueue.c       gpqueue.h
+libgrits_la_CPPFLAGS = $(AM_CPPFLAGS) \
+	-DPKGDATADIR="\"$(dots)$(datadir)/$(GRITS_SUBDIR)\"" \
+	-DPLUGINSDIR="\"$(dots)$(libdir)/$(GRITS_SUBDIR)\""
+libgrits_la_LIBADD  = $(AM_LDADD) \
+	objects/libgrits-objects.la \
+	data/libgrits-data.la
+libgrits_la_LDFLAGS = $(AM_LDFLAGS) \
 	-version-info $(LIB_VERSION)
 
 # Demo program
@@ -53,42 +53,42 @@ else
 BINLDFLAGS  = -static
 endif
 
-bin_PROGRAMS = gis-demo
+bin_PROGRAMS = grits-demo
 
-gis_demo_SOURCES  = gis-demo.c
-gis_demo_LDADD    = $(AM_LDADD) libgis.la
-gis_demo_LDFLAGS  = $(BINLDFLAGS)
+grits_demo_SOURCES = grits-demo.c
+grits_demo_LDADD   = $(AM_LDADD) libgrits.la
+grits_demo_LDFLAGS = $(BINLDFLAGS)
 
 # Test programs
-noinst_PROGRAMS = gis-test tile-test
+noinst_PROGRAMS = grits-test tile-test
 
-gis_test_SOURCES = gis-test.c
-gis_test_LDADD   = $(AM_LDADD) libgis.la
-gis_test_LDFLAGS  = $(BINLDFLAGS)
+grits_test_SOURCES = grits-test.c
+grits_test_LDADD   = $(AM_LDADD) libgrits.la
+grits_test_LDFLAGS = $(BINLDFLAGS)
 
 tile_test_SOURCES = tile-test.c
-tile_test_LDADD   = $(AM_LDADD) libgis.la
+tile_test_LDADD   = $(AM_LDADD) libgrits.la
 tile_test_LDFLAGS = $(BINLDFLAGS)
 
 
 MAINTAINERCLEANFILES = Makefile.in
 
 .list.c:
-	glib-genmarshal --prefix=gis_cclosure_marshal --body   $< > $@
+	glib-genmarshal --prefix=grits_cclosure_marshal --body   $< > $@
 .list.h:
-	glib-genmarshal --prefix=gis_cclosure_marshal --header $< > $@
+	glib-genmarshal --prefix=grits_cclosure_marshal --header $< > $@
 
-test: all .libs/$(GIS_SUBDIR)
-	./gis-test
+test: all .libs/$(GRITS_SUBDIR)
+	./grits-test
 
-gdb: all .libs/$(GIS_SUBDIR)
-	gdb ./gis-test
+gdb: all .libs/$(GRITS_SUBDIR)
+	gdb ./grits-test
 
-ddd: all .libs/$(GIS_SUBDIR)
-	ddd ./gis-test
+ddd: all .libs/$(GRITS_SUBDIR)
+	ddd ./grits-test
 
-.libs/$(GIS_SUBDIR): plugins/.libs
-	ln -sf ../plugins/.libs .libs/$(GIS_SUBDIR)
+.libs/$(GRITS_SUBDIR): plugins/.libs
+	ln -sf ../plugins/.libs .libs/$(GRITS_SUBDIR)
 
 memcheck: all
 	G_SLICE=always-malloc                   \
@@ -98,5 +98,5 @@ memcheck: all
 	         --leak-resolution=high         \
 	         --num-callers=50               \
 	         --suppressions=gtk.suppression \
-	         ./gis-test                     \
+	         ./grits-test                   \
 	2> valgrind.out
