--- a/src/objects/Makefile.am
+++ b/src/objects/Makefile.am
@@ -4,19 +4,19 @@ if NOTWIN32
 AM_CFLAGS += -fPIC
 endif
 
-gis_objects_includedir = $(includedir)/gis/objects
-gis_objects_include_HEADERS = \
-	gis-object.h \
-	gis-marker.h \
-	gis-callback.h \
-	gis-tile.h
+grits_objects_includedir = $(includedir)/grits/objects
+grits_objects_include_HEADERS = \
+	grits-object.h   \
+	grits-marker.h   \
+	grits-callback.h \
+	grits-tile.h
 
-noinst_LTLIBRARIES = libgis-objects.la
-libgis_objects_la_SOURCES = \
-	gis-object.c   gis-object.h \
-	gis-marker.c   gis-marker.h \
-	gis-callback.c gis-callback.h \
-	gis-tile.c     gis-tile.h
-libgis_objects_la_LDFLAGS = -static
+noinst_LTLIBRARIES = libgrits-objects.la
+libgrits_objects_la_SOURCES = \
+	grits-object.c   grits-object.h   \
+	grits-marker.c   grits-marker.h   \
+	grits-callback.c grits-callback.h \
+	grits-tile.c     grits-tile.h
+libgrits_objects_la_LDFLAGS = -static
 
 MAINTAINERCLEANFILES = Makefile.in
