--- a/src/plugins/Makefile.am
+++ b/src/plugins/Makefile.am
@@ -3,9 +3,9 @@ MAINTAINERCLEANFILES = Makefile.in
 AM_CFLAGS   = -Wall --std=gnu99 -I$(top_srcdir)/src
 AM_CPPFLAGS = $(GLIB_CFLAGS) $(GTK_CFLAGS) $(SOUP_CFLAGS)
 AM_LDFLAGS  = -module -avoid-version -no-undefined
-LIBS        = $(top_srcdir)/src/libgis.la
+LIBS        = $(top_srcdir)/src/libgrits.la
 
-pluginsdir  = "$(libdir)/$(GIS_SUBDIR)"
+pluginsdir  = "$(libdir)/$(GRITS_SUBDIR)"
 
 plugins_LTLIBRARIES = sat.la elev.la map.la env.la test.la
 sat_la_SOURCES      = sat.c  sat.h
